[project]
name = "guy-nodes-comfyui"
description = "These are designed to be custom nodes i found usefulness to that hopefully others can share."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/guyaton/guy-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "guyaton"
DisplayName = "guy-nodes-comfyui"
Icon = ""
